@@ -51,7 +51,7 @@ INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 
 # list of selectable jog increments
-INCREMENTS = 1mm, 0.1mm, 0.01mm, 0.001mm, 1.2345in
+INCREMENTS = 1mm, 0.1mm, 0.01mm, 0.001mm
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Grayscale Depth Image
@@ -181,46 +181,6 @@ TOOL_CHANGE_POSITION = 100 100 -10
 TOOL_CHANGE_QUILL_UP = 1
 
 [PLASMA]
-# These are the default values to set
-THC_Speed = 15
-THC_Speed_max = 20
-THC_Speed_min = 1
-THC_Speed_incr = 1
-
-Cut_Gap = 4.0
-Cut_Gap_max = 10
-Cut_Gap_min = 0.1
-Cut_Gap_incr = 0.1
-
-G0_Gap = 45
-G0_Gap_max = 55
-G0_Gap_min = 0.5
-G0_Gap_incr = 0.5
-
-Piercing_autostart = 1
-
-Pierce_Gap = 5
-Pierce_Gap_max = 12
-Pierce_Gap_min = 2
-Pierce_Gap_incr = 0.5
-
-Pierce_Delay = 0.5
-Pierce_Delay_max = 10
-Pierce_Delay_min = 0.01
-Pierce_Delay_incr = 0.01
-
-enable_Height_Lock = 0
-
-CHL_Threshold = 60
-CHL_Threshold_max = 100
-CHL_Threshold_min = 10
-CHL_Threshold_incr = 10
-
-THC_Target_Voltage = 100
-THC_Target_Voltage_max = 255
-THC_Target_Voltage_min = 55
-THC_Target_Voltage_incr = 5
-
 # Note that setting Ignition timeout to high can cause issues with very short cuts, problems can arrise when the timeout has not expired and starting to cut a new part
 
 #- Ignition fault timeout, the time allwed from TorchOn untill ArcOK before re-probing and re-initiating, in seconds
